<resources>
    <string name="app_name">My Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tips">11111</string>
    <string name="navigation_navigation_bar">NavigationBar</string>
    <string name="navigation_text_tab">TextView + LinearLayout</string>
    <string name="navigation_tab_host">TabHost</string>

    <string name="action_settings">Settings</string>
    <string name="item_home">主页</string>
    <string name="item_like">超市</string>
    <string name="item_location">发现</string>
    <string name="item_person">我的</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="home_item_icon">图标</string>
    <string name="home_item_name">平台名称</string>
    <string name="home_item_remark">用户投资x小时后可核验</string>
    <string name="home_item_content">查验次数xxxx次</string>
    <string name="home_item_button">点我核验</string>

    <string name="notice_item_from">知乎  57分钟前</string>
    <string name="notice_item_content">比特币估值飙6,300美元，创历史新高！</string>

    <string name="market_item_content">这里填写备注</string>

    <string name="mine_item_name">Hi, sniper</string>
    <string name="mine_item_level">LV. 20</string>
    <string name="mine_item_QA">我的提问</string>

    <string name="navi_button_home">主页</string>
    <string name="navi_button_chart">图表</string>
    <string name="navi_button_notice">舆情</string>
    <string name="navi_button_mine">关于</string>
    <string name="home_list_name">产品服务咨询</string>

</resources>
