<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="60dp"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/market_grid_big"
        android:src="@drawable/ic_menu_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/home_item_name" />

    <TextView
        android:id="@+id/market_grid_big_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:textSize="15sp"
        android:layout_toEndOf="@id/market_grid_big"
        android:text="@string/notice_item_from" />

    <TextView
        android:id="@+id/market_grid_big_content"
        android:layout_below="@id/market_grid_big_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/market_grid_big"
        android:text="@string/market_item_content"
        android:textSize="15sp" />

</RelativeLayout>