<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical">

    <ImageView
        android:src="@mipmap/mayi"
        android:id="@+id/home_item_name"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="30sp"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:text="@string/home_item_name" />

    <TextView
        android:id="@+id/home_item_remark"
        android:layout_below="@+id/home_item_name"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textSize="15sp"
        android:maxLines="1"
        android:ellipsize="marquee"
        android:text="@string/home_item_name" />

    <TextView
        android:id="@+id/home_item_content"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_toEndOf="@id/home_item_name"
        android:text="@string/home_item_content"/>

    <ImageView
        android:src="@mipmap/kick_me"
        android:id="@+id/list_item_money"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginEnd="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:text="@string/home_item_button"/>

</RelativeLayout>